# Resume_Parser

./: .gitignore  pyproject.toml  pytest.ini
resume_parser/myapp/: urls.py  views.py
resume_parser/myapp/templates/: index.html
resume_parser/myapp/tests/: test_views.py
resume_parser/resume_parser/: settings.py  urls.py
