[tool.poetry]
name = "resume-parser"
version = "0.1.0"
description = ""
authors = ["Rizwan Riaz <iamrizwan077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pytest = "^8.3.2"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
